2005-04-15  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "zh_TW" (traditional Chinese) to ALL_LINGUAS.

2005-04-14  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
	* freedesktop.org.xml.in: added application/x-cue as the CD image
	cuesheet mime-type

2005-04-14  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "rw" (Kinyarwanda) to ALL_LINGUAS.

Fri Apr  8 23:34:27 2005  Jonathan Blandford  <jrb@redhat.com>

	* update-mime-database.c: Patch from Matthias Clasen
	<mclasen@redhat.com> to adjust one offset after adding the
	namespace table.  Produced cache now works.

2005-04-07  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: work-around for old versions of automake

Fri Apr  1 14:33:54 2005  Jonathan Blandford  <jrb@redhat.com>

	* shared-mime-info-spec.xml:
	* update-mime-database.c: Patch from Matthias Clasen
	<mclasen@redhat.com> to make the MIME Cache contain an mmappable
	binary format.

=== shared-mime-info 0.16 ===
Tue Mar 22 14:33:31 2005  Jonathan Blandford  <jrb@redhat.com>

	* NEWS:
	* freedesktop.org.xml:
	* configure.in: Release 0.16
	
2005-03-20  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "ru" (Russian) to ALL_LINGUAS.

2005-03-19  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
	* freedesktop.org.xml.in: added StuffIt archives

Thu Mar 10 11:55:21 2005  Jonathan Blandford  <jrb@redhat.com>

	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
	* freedesktop.org.xml.in: Add OpenDocumentText formats.

2005-01-21  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "nb" (Norwegian (bokmål)) to ALL_LINGUAS.

2005-01-16  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: added it to ALL_LINGUAS

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added many sub-class-of definitions, patch
	by David Faure <faure@kde.org>, fixes #619.
