@@ -1,3 +1,14 @@
+2005-04-16  Christophe Fergeau  <teuf@gnome.org>
+
+	* update-mime-database.c: (my_xmlGetNsProp), (get_type),
+	(match_node), (get_priority), (add_namespace),
+	(process_freedesktop_node), (has_lang), (remove_old), (load_type),
+	(load_source_file), (atomic_update), (match_offset),
+	(match_value_and_mask), (match_word_size), (build_matches),
+	(add_ns), (add_alias), (write_header), (write_magic_cache):
+	fix signedness warnings in gcc, maybe it would be better to just
+	disable that warning
+
 2005-04-15  Miloslav Trmac  <mitr@volny.cz>
 
 	* configure.in: Added "zh_TW" (traditional Chinese) to ALL_LINGUAS.
